traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:21: error: reassignment to val
    cpt = cpt + 1
        ^