traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt = 0
  var y = 0
  while (finale==false) {
		colonne(cpt)
    y = y + 1
    setPos(0,y)
  }
}

def finale(): Boolean = {
  if (getX==6 && getY==6) {
    return true
  } else {
    return false
  }
}

def colonne(cpt:Int) {
  for (i<-1 to 7) {
    ecritMessage(cpt)
    cpt = cpt + 1
  }
}